--- a/app/src/App.css
+++ b/app/src/App.css
@@ -15,3 +15,33 @@
 
 }
 
+
+.user-pannel{
+  padding:30px 60px;
+  display: flex;
+  justify-content:space-between;
+  align-content: center;
+
+
+}
+
+.logout{
+
+
+  /* top:30px;
+  right:10%; */
+  padding:10px;
+
+  border:none;
+  color:#ec4899;
+  background-image:linear-gradient(to right,#ec4899,#8B5Cf6);
+  background-clip: text;
+  -webkit-text-fill-color:transparent;
+  border:2px solid;
+  border-radius: 36px;
+  width:100px;
+  height:50px;
+
+
+
+}
